# svrcubeworld

./: #test#  .gitignore  .gitmodules  Appl.cpp  Appl.h  CMakeLists.nano  CMakeLists.txt  Consumer.cpp  Egl.c  Egl.h  FrameParams.h  Framebuffer.cpp  Framebuffer.h  GlBuffer.cpp  GlBuffer.h  GlGeometry.cpp  GlGeometry.h  GlProgram.cpp  GlProgram.h  GpuState.h  OVR_Bridge.h  OVR_Math.h  README.md  ServerWorker.cpp  SurfaceRender.cpp  SurfaceRender.h  SvrCubeWorld.cpp  SvrCubeWorld.h  VrApi.h  VrApi_Types.h  VrCubeWorld_NativeCutdown.c  armv7_compile.txt  build.sh  build.sh~  clean.sh  client.cpp  client_full.cpp  configure.sh  data.tga  errors.txt  (+56 more)
ovr/: OVR_Bridge.h
results/: yuvopengl_logcat.txt  yuvopengl_logcat2.txt
results/101521/: nano.results.101521  server.results.101521
shaders/: fragmentShader.fs  renderBuffer.fs  vertexShader.vs  yuv420p.fs  yuvFailed.fs  yuvShader.fs
svr/: svrAppl.cpp  svrAppl.h  svrCubeWorld.cpp  svrCubeWorld.h  svrServer.cpp  svrServer.h  svrWorker.cpp  svrWorker.h
test/: client_test.py
tests/: gl_test.cc  ovr_test.cc
